<resources>
    <string name="app_name">app</string>
    <string name="defaultBikeId">#00</string>
    <string name="defaultBikeTitle">neznan naziv kolesa</string>
    <string name="izposojevalec">Izposojevalec</string>
    <string name="sektor">Sektor</string>
    <string name="namen">Namen</string>
    <string name="rezerviraj">Rezerviraj</string>
    <string name="km">km</string>
    <string name="od">OD</string>
    <string name="doStr">DO</string>
    <string name="nazaj">Nazaj</string>
    <string name="sektor_razvoj">razvoj</string>
    <string name="sektor_prodaja">prodaja</string>
    <string name="sektor_proizvodnja">proizvodnja</string>
    <string name="ni_rezervacije">Ni rezervacije</string>
    <string name="datum">datum</string>
    <string name="ura">ura</string>
    <string name="defaultLocationId">#00</string>
    <string name="vrni">VRNI</string>
    <string name="izposodi">IZPOSODI</string>
    <string name="preveri_lokacije">PREVERI LOKACIJE</string>
    <string name="neznano">neznano</string>
    <string name="qr_scan_instruction">Skeniraj QR kodo na parkirišču</string>
</resources>